updated the styling for a elements and fixed a overflow bug

--- a/src/assets/style/base/_typography.scss
+++ b/src/assets/style/base/_typography.scss
@@ -52,3 +52,8 @@ input {
 label {
   font-weight: $fontWeightBold;
 }
+
+a {
+  text-decoration: none;
+  color: $clrPrimary;
+}
